# bethutil

./: .clang-format  .clang-tidy  .envrc  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  algorithms_8hpp.html  anim_8hpp.html  annotated.html  archive_8hpp.html  archive__data_8hpp.html  archive__type_8hpp.html  bethutil.tagfile.xml  bsa_2error__code_8hpp.html  btu_2bsa_2settings_8hpp.html  c__api_8h.html  class_microsoft_1_1_w_r_l_1_1_com_ptr.html  classbtu_1_1bsa_1_1_archive.html  classbtu_1_1bsa_1_1_archive_data.html  classbtu_1_1bsa_1_1_failure_source_category.html  classbtu_1_1bsa_1_1_file.html  classbtu_1_1bsa_1_1_file_path.html  classbtu_1_1common_1_1_exception.html  classbtu_1_1common_1_1_invalid_u_t_f8.html  classbtu_1_1common_1_1_lazy.html  classbtu_1_1common_1_1_u_t_f8_iterator.html  classbtu_1_1common_1_1synchronized.html  classbtu_1_1common_1_1update__guard.html  classbtu_1_1esp_1_1_failure_source_category.html  classbtu_1_1hkx_1_1_anim.html  classbtu_1_1hkx_1_1_anim_exe.html  classbtu_1_1hkx_1_1_failure_source_category.html  classbtu_1_1hkx_1_1detail_1_1_anim_exe_info.html  classbtu_1_1modmanager_1_1_mod_file.html  classbtu_1_1modmanager_1_1_mod_folder.html  classbtu_1_1modmanager_1_1_mod_folder_iterator.html  classbtu_1_1modmanager_1_1_mod_folder_iterator_base.html  (+157 more)
.github/workflows/: autofix.ci.yml  deploy_docs.yml  formatting.yml  main_ci.yml
cmake/: config.cmake.in
cmake/ports/bc7enc/: portfile.cmake  vcpkg.json
cmake/ports/bethutil-common/: portfile.cmake  vcpkg.json
cmake/ports/crunch2/: fix_cmake.patch  fix_linux_compile.patch  portfile.cmake  vcpkg.json
cmake/ports/directx-headers/: portfile.cmake
cmake/ports/directxmath/: portfile.cmake
cmake/ports/directxmesh/: portfile.cmake
cmake/ports/directxtex/: portfile.cmake
cmake/ports/flux/: portfile.cmake  vcpkg.json
cmake/ports/libflow/: LICENSE  portfile.cmake  vcpkg.json
cmake/ports/mpsc-channel/: portfile.cmake  vcpkg.json
cmake/ports/neo-fun/: CMakeLists.txt  config.cmake.in  portfile.cmake  vcpkg.json
cmake/ports/nifly/: portfile.cmake  vcpkg.json
cmake/ports/rsm-bsa/: directxtex24_10.patch  portfile.cmake  vcpkg.json
cmake/ports/utf8h/: portfile.cmake  vcpkg.json
data/: bsa_clean_dummy_plugins.7z  bsa_load_save.7z  bsa_unpack.7z  convert-hkx.7z  convert.7z  convert2.7z  convert_bc1.7z  crunch.7z  crunch_compress_dxt1.7z  crunch_compress_dxt5.7z  crunch_mipmaps.7z  crunch_resize.7z  decompress.7z  esp.7z  exe.7z  generate_mipmaps.7z  make_transparent_alpha.7z  mod_manager.7z  modfolder.7z  modfolder_ignore_existing.7z  modfolder_reintegrate.7z  modfolder_transform.7z  nif_convert.7z  nif_corrupted.7z  nif_memory_io.7z  nif_optimize.7z  optimize.7z  pack.7z  read_file.7z  resize.7z  tex_memory_io.7z
docs/: CMakeLists.txt  index.doxy  poxy.toml.in
examples/: CMakeLists.txt  bsa_tool.cpp  empty.cpp  tool.cpp
include/: settings.hpp
include/btu/bsa/: archive.hpp  archive_data.hpp  c_api.h  error_code.hpp  pack.hpp  plugin.hpp  settings.hpp  transform.hpp  unpack.hpp
include/btu/bsa/detail/: archive_type.hpp  common.hpp
include/btu/bsa/detail/backends/: archive.hpp  bsarch_archive.hpp  rsm_archive.hpp
include/btu/common/: algorithms.hpp  error.hpp  filesystem.hpp  functional.hpp  games.hpp  json.hpp  metaprogramming.hpp  path.hpp  string.hpp  template.hpp  threading.hpp
include/btu/esp/: error_code.hpp  functions.hpp
include/btu/hkx/: anim.hpp  convert.hpp  error_code.hpp  functions.hpp
include/btu/hkx/detail/: common.hpp
include/btu/modmanager/: mod_folder.hpp  mod_manager.hpp
include/btu/nif/: common.hpp  functions.hpp  mesh.hpp  optimize.hpp
include/btu/nif/detail/: common.hpp
include/btu/tex/: compression_device.hpp  crunch_functions.hpp  crunch_texture.hpp  dimension.hpp  dxtex.hpp  error_code.hpp  formats.hpp  functions.hpp  optimize.hpp  texture.hpp
include/btu/tex/detail/: common.hpp  formats_string.hpp  functional.hpp  windows.hpp
nix/: cmrc.nix  vcpkg.nix
src/: CMakeLists.txt  Texture.cpp  archive_data.cpp  c_api.cpp  compression_device.cpp  convert.cpp  empty.cpp  error_code.cpp  formats.cpp  functions.cpp  main.cpp  optimize.cpp  pack.cpp  plugin.cpp  string.cpp  unpack.cpp
src/bsa/: archive.cpp  archive_data.cpp  pack.cpp  plugin.cpp  unpack.cpp
src/bsa/detail/: archive_type.cpp
src/common/: filesystem.cpp  string.cpp
src/detail/: archive_type.cpp
src/detail/backends/: DDS.h  bsarch_archive.cpp  rsm_archive.cpp
src/esp/: functions.cpp
src/hkx/: anim.cpp  functions.cpp
src/modmanager/: mod_folder.cpp  mod_manager.cpp
src/nif/: functions.cpp  mesh.cpp  optimize.cpp
src/tex/: compression_device.cpp  crunch_functions.cpp  crunch_texture.cpp  error_code.cpp  formats.cpp  functions.cpp  functions_compress_bc7.cpp  optimize.cpp  texture.cpp
tests/: CMakeLists.txt  archive_data.cpp  pack.cpp  plugin.cpp  utils.hpp
tests/bsa/: archive.cpp  archive_data.cpp  pack.cpp  plugin.cpp  unpack.cpp  utils.hpp
tests/common/: filesystem.cpp  functional.cpp  json.cpp  metaprogramming.cpp  string.cpp  threading.cpp
tests/esp/: functions.cpp
tests/hkx/: anim.cpp  convert.cpp  functions.cpp
tests/modmanager/: mod_folder.cpp  mod_manager.cpp
tests/nif/: functions.cpp  optimize.cpp  utils.hpp
tests/src/: convert.cpp  filesystem.cpp  formats.cpp  functional.cpp  functions.cpp  main.cpp  metaprogramming.cpp  optimize.cpp  path.cpp  string.cpp  utils.hpp
tests/tex/: crunch.cpp  formats.cpp  functions.cpp  optimize.cpp  utils.hpp
